clusters/cluster0/kubernetes/apps/media/prowlarr/app/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - port: 9696
      protocol: TCP
      targetPort: 9696
