clusters/cluster0/kubernetes/apps/media/prowlarr/app/prowlarr-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gregbob.net
spec:
  ingressClassName: external
  rules:
  - host: prowlarr.gregbob.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: prowlarr-service
            port:
              number: 9696
